--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   "dependencies": {
     "@angular-architects/ngrx-toolkit": "^20.3.0",
     "@angular-architects/paper-design": "^1.0.3",
-    "@angular/animations": "^20.2.3",
-    "@angular/cdk": "^20.2.1",
-    "@angular/common": "^20.2.3",
-    "@angular/compiler": "^20.2.3",
-    "@angular/core": "^20.2.3",
-    "@angular/forms": "^20.2.3",
-    "@angular/material": "^20.2.1",
-    "@angular/platform-browser": "^20.2.3",
-    "@angular/platform-browser-dynamic": "^20.2.3",
-    "@angular/router": "^20.2.3",
+    "@angular/animations": "^21.0.0-next.2",
+    "@angular/cdk": "^21.0.0-next.2",
+    "@angular/common": "^21.0.0-next.2",
+    "@angular/compiler": "^21.0.0-next.2",
+    "@angular/core": "^21.0.0-next.2",
+    "@angular/forms": "^21.0.0-next.2",
+    "@angular/material": "^21.0.0-next.2",
+    "@angular/platform-browser": "^21.0.0-next.2",
+    "@angular/platform-browser-dynamic": "^21.0.0-next.2",
+    "@angular/router": "^21.0.0-next.2",
     "@ngrx/signals": "^20.0.1",
     "@standard-schema/spec": "^1.0.0",
     "bootstrap": "^5.3.3",
@@ -33,9 +33,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.2.1",
-    "@angular/cli": "~20.2.1",
-    "@angular/compiler-cli": "^20.2.3",
+    "@angular/build": "^21.0.0-next.2",
+    "@angular/cli": "~21.0.0-next.2",
+    "@angular/compiler-cli": "^21.0.0-next.2",
     "@types/jasmine": "~4.3.0",
     "husky": "^9.1.7",
     "jasmine-core": "~4.5.0",
