--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-architects/ngrx-toolkit": "^20.3.0",
+    "@angular-architects/ngrx-toolkit": "^20.4.0",
     "@angular-architects/paper-design": "^1.0.3",
     "@angular/animations": "^21.0.0-next.2",
     "@angular/cdk": "^21.0.0-next.2",
@@ -47,5 +47,15 @@
     "prettier": "^2.8.0",
     "pretty-quick": "^3.1.3",
     "typescript": "~5.9.2"
+  },
+  "overrides": {
+    "@angular-architects/ngrx-toolkit": {
+      "@angular/common": "^21.0.0-next.2",
+      "@angular/core": "^21.0.0-next.2",
+      "@angular/forms": "^21.0.0-next.2",
+      "@angular/platform-browser": "^21.0.0-next.2",
+      "@angular/platform-browser-dynamic": "^21.0.0-next.2",
+      "@angular/router": "^21.0.0-next.2"
+    }
   }
 }
