--- a/package.json
+++ b/package.json
@@ -33,9 +33,14 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "@angular-devkit/core": "~21.0.0-next.2",
+    "@angular-devkit/schematics": "~21.0.0-next.2",
     "@angular/build": "^21.0.0-next.2",
     "@angular/cli": "~21.0.0-next.2",
     "@angular/compiler-cli": "^21.0.0-next.2",
+    "@nx/angular": "22.1.1",
+    "@nx/workspace": "22.1.1",
+    "@schematics/angular": "~21.0.0-next.2",
     "@types/jasmine": "~4.3.0",
     "husky": "^9.1.7",
     "jasmine-core": "~4.5.0",
@@ -44,6 +49,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "nx": "22.1.1",
     "prettier": "^2.8.0",
     "pretty-quick": "^3.1.3",
     "typescript": "~5.9.2"
