--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   "dependencies": {
     "@angular-architects/ngrx-toolkit": "^20.4.0",
     "@angular-architects/paper-design": "^1.0.3",
-    "@angular/animations": "^21.0.0-next.2",
+    "@angular/animations": "^21.0.0",
     "@angular/cdk": "^21.0.0-next.2",
-    "@angular/common": "^21.0.0-next.2",
-    "@angular/compiler": "^21.0.0-next.2",
-    "@angular/core": "^21.0.0-next.2",
-    "@angular/forms": "^21.0.0-next.2",
+    "@angular/common": "^21.0.0",
+    "@angular/compiler": "^21.0.0",
+    "@angular/core": "^21.0.0",
+    "@angular/forms": "^21.0.0",
     "@angular/material": "^21.0.0-next.2",
-    "@angular/platform-browser": "^21.0.0-next.2",
-    "@angular/platform-browser-dynamic": "^21.0.0-next.2",
-    "@angular/router": "^21.0.0-next.2",
+    "@angular/platform-browser": "^21.0.0",
+    "@angular/platform-browser-dynamic": "^21.0.0",
+    "@angular/router": "^21.0.0",
     "@ngrx/signals": "^20.0.1",
     "@standard-schema/spec": "^1.0.0",
     "bootstrap": "^5.3.3",
@@ -33,11 +33,11 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/core": "~21.0.0-next.2",
-    "@angular-devkit/schematics": "~21.0.0-next.2",
-    "@angular/build": "^21.0.0-next.2",
-    "@angular/cli": "~21.0.0-next.2",
-    "@angular/compiler-cli": "^21.0.0-next.2",
+    "@angular-devkit/core": "~21.0.0",
+    "@angular-devkit/schematics": "~21.0.0",
+    "@angular/build": "^21.0.0",
+    "@angular/cli": "~21.0.0",
+    "@angular/compiler-cli": "^21.0.0",
     "@nx/angular": "22.1.1",
     "@nx/workspace": "22.1.1",
     "@schematics/angular": "~21.0.0-next.2",
