--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@angular/cli": "~21.0.0-next.2",
     "@angular/compiler-cli": "^21.0.0-next.2",
     "@types/jasmine": "~4.3.0",
+    "autoprefixer": "^10.4.22",
+    "daisyui": "^4.12.14",
     "husky": "^9.1.7",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
@@ -44,8 +46,10 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "postcss": "^8.5.6",
     "prettier": "^2.8.0",
     "pretty-quick": "^3.1.3",
+    "tailwindcss": "^3.4.19",
     "typescript": "~5.9.2"
   },
   "overrides": {
