--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-browser": "^21.0.0",
     "@angular/platform-browser-dynamic": "^21.0.0",
     "@angular/router": "^21.0.0",
-    "@ngrx/signals": "^20.1.0",
+    "@ngrx/signals": "^21.0.0-beta.0",
     "@standard-schema/spec": "^1.0.0",
     "bootstrap": "^5.3.3",
     "date-fns": "^2.30.0",
@@ -38,8 +38,8 @@
     "@angular/build": "^21.0.0",
     "@angular/cli": "~21.0.0",
     "@angular/compiler-cli": "^21.0.0",
-    "@nx/angular": "22.1.1",
-    "@nx/workspace": "22.1.1",
+    "@nx/angular": "22.2.3",
+    "@nx/workspace": "22.2.3",
     "@schematics/angular": "~21.0.0-next.2",
     "@types/jasmine": "~4.3.0",
     "husky": "^9.1.7",
@@ -49,7 +49,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "nx": "22.1.1",
+    "nx": "22.2.3",
     "prettier": "^2.8.0",
     "pretty-quick": "^3.1.3",
     "typescript": "~5.9.2"
@@ -61,7 +61,8 @@
       "@angular/forms": "^21.0.0-next.2",
       "@angular/platform-browser": "^21.0.0-next.2",
       "@angular/platform-browser-dynamic": "^21.0.0-next.2",
-      "@angular/router": "^21.0.0-next.2"
+      "@angular/router": "^21.0.0-next.2",
+      "@ngrx/signals": "^21.0.0-beta.0"
     }
   }
 }
